--- a/services/web-app/components/svg-libraries/svg-library.module.scss
+++ b/services/web-app/components/svg-libraries/svg-library.module.scss
@@ -3,7 +3,8 @@
 @use '@carbon/react/scss/theme' as theme;
 @use '@carbon/react/scss/type' as type;
 @use '@carbon/react/scss/motion' as motion;
-@use '@carbon/react/scss/utilities/z-index' as z-index;
+@use '~styles/variables' as variables;
+@use 'sass:map';
 @use '@carbon/react/scss/utilities/convert' as convert;
 
 .svg-page {
@@ -15,7 +16,7 @@
 @media screen and (prefers-reduced-motion: reduce) {
   .filter-row {
     position: sticky;
-    z-index: z-index.z('footer');
+    z-index: map.get(variables.$z-indexes, 'floating');
     top: 7rem;
     display: flex;
     flex-direction: column;
@@ -31,7 +32,7 @@
 
 .filter-row {
   position: sticky;
-  z-index: z-index.z('footer');
+  z-index: map.get(variables.$z-indexes, 'floating');
   top: 7rem;
   display: flex;
   flex-direction: column;
@@ -99,7 +100,7 @@
 
 .filter-row::before {
   position: absolute;
-  z-index: z-index.z('footer');
+  z-index: map.get(variables.$z-indexes, 'floating');
   top: -1rem;
   width: 100%;
   height: 1rem;
